--- a/dashboard.html
+++ b/dashboard.html
@@ -68,7 +68,7 @@
                     COMPETITIVE SEASON 1</h2>
 
                 <button id="quick-play-btn" class="btn btn-primary"
-                    style="width: 100%; max-width: 600px; padding: 2.5rem; font-size: 2.2rem; font-family: var(--font-display); letter-spacing: 4px; clip-path: polygon(20px 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%, 0 20px); border: 2px solid rgba(255,255,255,0.8); box-shadow: 0 0 50px rgba(255, 215, 0, 0.2); transition: all 0.2s;">
+                    style="width: 100%; max-width: 600px; padding: 2rem 1.5rem; font-size: 1.8rem; font-family: var(--font-display); letter-spacing: 3px; clip-path: polygon(20px 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%, 0 20px); border: 2px solid rgba(255,255,255,0.8); box-shadow: 0 0 50px rgba(255, 215, 0, 0.2); transition: all 0.2s;">
                     START RANKED MATCH
                 </button>
 
